<resources>
    <string name="app_name">CS-360 Weight Tracker</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="weight">Weight</string>
    <string name="date">Recorded Date</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="logged_in">Logged In</string>
    <string name="enter_your_current_weight">Enter your current weight</string>
    <string name="congrats">GOAL REACHED! CONGRATULATIONS!</string>

    <!-- Titles -->
    <string name="title_registration">Registration</string>
    <string name="title_addweight">Add Weight</string>
    <string name="title_login">Login</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_goal">Goal</string>

    <string name="weight_lost">Weight Lost:</string>
    <string name="weight_loss">Weight Loss %:</string>
    <string name="recorded_weights">Recorded Weights</string>
    <string name="your_current_goal">Your Current Goal</string>
    <string name="weight_in_lbs">Weight in lbs.</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="customize_settings">Customize Your Settings</string>
    <string name="sms_summary">Enable/Disable SMS Notifications</string>
    <string name="in_app_summary">Enable/Disable In-App Notifications</string>
    <string name="notifications">Notification Settings</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="in_app_notifications">In-App Notifications</string>
    <string name="weight_to_goal">Left To Goal:</string>
    <string name="lbs">lbs.</string>
    <string name="title_logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to Logout?</string>
    <string name="logout">Logout</string>
    <string name="scale_image">Scale Image</string>
    <string name="sms_number">Phone Number</string>
    <string name="sms_number_summary">Phone number to send SMS messages</string>
    <string name="sms_notification_category">SMS Notifications</string>
    <string name="in_app_notification_category">In-App Notifications</string>
    <string name="save">Save</string>
    <string name="update_goal">Modify This Goal</string>
    <string name="no_goal_set">No goal set</string>
    <string name="title_log">Log</string>
    <string name="trends">Weight Trends</string>
    <string name="weight_log">Weight Log</string>
    <string name="LessThanGoal">Less Than Goal</string>
    <string name="WeightGained">Weight Gained</string>

</resources>