<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/sms_notification_category">
        <SwitchPreferenceCompat
            app:key="sms"
            app:title="@string/sms_notifications"
            app:summary="@string/sms_summary"
            app:defaultValue="false" />

        <EditTextPreference
            app:key="sms_number"
            app:title="@string/sms_number"
            app:summary="@string/sms_number_summary"
            android:inputType="phone" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/in_app_notification_category">
        <SwitchPreferenceCompat
            app:key="in_app"
            app:title="@string/in_app_notifications"
            app:summary="@string/in_app_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>