<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="3">

    <!-- This layout is used to display the weights in the recyclerview -->
    <!-- Weight Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/weight"
        android:textAlignment="center"/>

    <!-- Date Text -->
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/date"
        android:textAlignment="center" />

    <!-- Delete Button -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/delete"
        android:textAlignment="center"
        />

</LinearLayout>