<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <!-- Header Text for Registration Page -->
    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/register_your_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/firstname"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <!-- First Name Field -->
    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/first_name"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintBottom_toTopOf="@id/lastname"
        />

    <!-- Last Name Field -->
    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/last_name"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname"
        app:layout_constraintBottom_toTopOf="@id/username"
        />

    <!-- Username Field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastname"
        app:layout_constraintBottom_toTopOf="@id/password"
        />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toTopOf="@id/password_confirm"
        />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@id/registerBtn"
        />

    <!-- Register Button -->
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:enabled="false"
        android:backgroundTint="@color/green_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirm"
        app:layout_constraintBottom_toTopOf="@id/loginLink"
        app:layout_goneMarginTop="40dp"
        />

    <!-- Login Link -->
    <Button
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/french_blue"
        app:layout_constraintTop_toBottomOf="@id/registerBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/back_to_login_page"
        android:background="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>