<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.goal.GoalFragment">

    <!-- Goal Header Text -->
    <TextView
        android:id="@+id/goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/your_current_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/goal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditGoal"
        android:text="135"
        android:hint="@string/weight_in_lbs"
        android:enabled="false"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_btn"
        app:layout_constraintTop_toBottomOf="@id/goal_text"
        />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/edit"
        android:paddingHorizontal="8dp"
        app:layout_constraintStart_toEndOf="@id/goal_value"
        app:layout_constraintBottom_toBottomOf="@id/goal_value"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>