<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addweight.AddWeightFragment">

    <ImageView
        android:id="@+id/weight_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/scale_image"
        android:src="@drawable/baseline_monitor_weight_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_home"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/french_blue" />

    <!-- Enter Weight Header Text -->
    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderTextNoMarginTop"
        android:text="@string/enter_your_current_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_icon"
        app:layout_constraintBottom_toTopOf="@id/weightEntry" />

    <!-- Weight Entry Area, using a custom text input layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightEntry"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/weight"
        android:backgroundTint="@color/french_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        app:layout_constraintBottom_toTopOf="@id/addWeightBtn"
        app:suffixText=" lbs.">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/addWeightBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/weightEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>